
    - fix an XS stack issue with calling other routines inside forprimes

    - is_pseudoprime and is_euler_pseudoprime have consistent XS, PP, and GMP
      behaviour.  Specifically, single digit inputs and bases a multiple of n.

    - kronecker in XS with 63-bit signed a and 64-bit unsigned n fixed.

    - forfactored and forsquarefree were incorrect near 64-bit boundary.

    [FUNCTIONALITY AND PERFORMANCE]

    - LMO prime count is 1.2-1.5x faster.

    - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.

    - save a nanosecond or two in 32-bit primality testing.

    - Rewrite Ramanujan prime bounds using Axler (2017).  For large values
      this is much improved.  Big speedup for large exact nth/count.

    - Approx Ramanujan prime nth and count are much more accurate.

    - Internally, approx prime counts are faster, as we don't need
      to compute RiemannR to extreme precision.

    - Faster and tighter nth_prime_upper bounds.

    - Rewritten C version of Mertens based on pseudocode from Trizen.
      Over 100x faster at 2^32 and grows O(n^(2/3)) vs O(n).

    - fromdigits for bigints uses subquadratic algorithm, thanks from Trizen.
      It also will call GMP if possible.  The large example runs 100x faster.

    - ExponentialIntegral with quadmath is much more precise across the range.

    - rewrote C factorialmod.  1.1-2x faster for small inputs, 3-4x for large.
      The PP non-GMP version also has optimizations added.

    - sum_primes faster for some inputs.

    - Rewrote legendre_phi and removed code duplication.  Much faster.
      Also makes _legendre_pi(n) about 4x faster.

    - Rewrote prime count caching and removed code duplication.
      Uses less memory at large sizes and is faster.

    - Error message "must be a positive integer" changed to
      "must be a non-negative integer" when zero is allowed.

    - More accurate semiprime_count_approx and nth_semiprime_approx.
